--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: thaiat
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -97,4 +97,4 @@ disqus_show_comment_count: true
 google_analytics_tracking_id: UA-48863005-3
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
